test/functions/resolution/errors/testBadCallCandidates.21-all.good
testBadCallCandidates.chpl:42: In method 'test':
testBadCallCandidates.chpl:54: error: unresolved call 'D.baz("hi")'
testBadCallCandidates.chpl:39: note: this candidate did not match: D.baz(x: C)
testBadCallCandidates.chpl:54: note: because call actual argument #1 with type string
testBadCallCandidates.chpl:39: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:54: note: other candidates include:
testBadCallCandidates.chpl:68: note: baz(x: C)
